[patch] Add TrustedConnection to PIJDBC properties
Unifiy mamUserEmail variable
Change documentation accordingly