@@ -55,7 +55,8 @@ public class DataProvider {
     private static int connectorType = Constants.CONNECTOR_DEVICE;
     private static String clientSite;
 
-    public DataProvider (Config config, TagDataCache tc,  OffsetRecord offsetRecord, ArrayBlockingQueue<String[]> iotDataQueue) throws Exception {
+    public DataProvider(Config config, TagDataCache tc, OffsetRecord offsetRecord,
+            ArrayBlockingQueue<String[]> iotDataQueue) throws Exception {
         if (config == null || iotDataQueue == null || offsetRecord == null) {
             throw new NullPointerException("DataProvider: config or tc parameter cannot be null");
         }
@@ -75,7 +76,7 @@ public class DataProvider {
         String serverTimezone = historian.getString("serverTimezone");
 
         String sqlTemplateFile = config.getConfigDir() + "/deviceSqlTemplate.sql";
-        if ( connectorType == Constants.CONNECTOR_ALARM) {
+        if (connectorType == Constants.CONNECTOR_ALARM) {
             sqlTemplateFile = config.getConfigDir() + "/alarmSqlTemplate.sql";
         }
         sqlQueryTemplate = new String(Files.readAllBytes(Paths.get(sqlTemplateFile)));
@@ -87,7 +88,8 @@ public class DataProvider {
         this.type = Constants.DB_SOURCE_TYPE_UNKNOWN;
         if (dbType.equals("mssql")) {
             this.type = Constants.DB_SOURCE_TYPE_MSSQL;
-        } if (dbType.equals("mysql")) {
+        }
+        if (dbType.equals("mysql")) {
             this.type = Constants.DB_SOURCE_TYPE_MYSQL;
             if (!serverTimezone.equals("")) {
                 sourceJDBCUrl = sourceJDBCUrl + "?serverTimezone=" + serverTimezone;
@@ -95,7 +97,7 @@ public class DataProvider {
         }
 
         logger.info(String.format("Source DB URL: %s User: %s  Password: %s", sourceJDBCUrl, dbUser, dbPass));
-    }    
+    }
 
     /* Extract data from historian */
     public long extract() throws Exception {
@@ -118,8 +120,8 @@ public class DataProvider {
 
         processedRowCount = 0;
 
-        logger.info(String.format("StartTime:%d EndTime:%d Year:%d Month:%d currTime:%d", 
-            startTimeSecs, endTimeSecs, year, month, (cycleStartTimeMillis/1000)));
+        logger.info(String.format("StartTime:%d EndTime:%d Year:%d Month:%d currTime:%d",
+                startTimeSecs, endTimeSecs, year, month, (cycleStartTimeMillis / 1000)));
 
         String querySql = getDBSql(startTimeMilli, endTimeMilli, year, month);
         logger.info("Extract SQL: " + querySql);
@@ -134,7 +136,7 @@ public class DataProvider {
         } catch (Exception qex) {
             gotData = 0;
             if (qex instanceof SQLException) {
-                int errCode = ((SQLException)qex).getErrorCode();
+                int errCode = ((SQLException) qex).getErrorCode();
                 logger.info(String.format("SQLException errCode=%d message=%s", errCode, qex.getMessage()));
                 if (errCode == 1146) {
                     /* pisql - table doesn't exist. Connector cannot work. FATAL error */
@@ -164,32 +166,36 @@ public class DataProvider {
                     sourceDBColumnNames.add(colName);
                 }
             }
-        } catch(Exception e) {
+        } catch (Exception e) {
             resetDBConnection(stmt, rs, conn);
             return waitTime;
         }
-   
+
         /* Set extracted data in processing queue */
         long currentTotalCount = 0;
         try {
             processedRowCount = setIotDataQueue(rs, iotDataQueue);
             currentTotalCount = offsetRecord.setProcessedCount(processedRowCount);
-        } catch(Exception e) {
+        } catch (Exception e) {
             logger.log(Level.INFO, e.getMessage(), e);
-        } 
- 
-        logger.info(String.format("Extraction process stats: current=%d total=%d", processedRowCount, currentTotalCount));
+        }
 
-        if (rs != null) rs.close();
-        if (stmt != null) stmt.close();
-        if (conn != null) conn.close();
+        logger.info(
+                String.format("Extraction process stats: current=%d total=%d", processedRowCount, currentTotalCount));
+
+        if (rs != null)
+            rs.close();
+        if (stmt != null)
+            stmt.close();
+        if (conn != null)
+            conn.close();
 
         /* update times for extractions */
         int waitFlag = offsetRecord.updateOffsetData(endTimeSecs);
         waitTime = offsetRecord.getWaitTimeMilli(waitFlag, cycleStartTimeMillis);
         if (processedRowCount == 0) {
             logger.info(String.format("No Data extracted: currCount=%d waitTimeMilli=%d entities=%d\n",
-                currentTotalCount, waitTime, offsetRecord.getEntityCount()));
+                    currentTotalCount, waitTime, offsetRecord.getEntityCount()));
         } else {
             cycleEndTimeMillis = System.currentTimeMillis();
             long timeDiff = (cycleEndTimeMillis - cycleStartTimeMillis);
@@ -208,21 +214,22 @@ public class DataProvider {
         Connection conn = null;
         while (conn == null) {
             try {
-                if ( type == Constants.DB_SOURCE_TYPE_PISQL ) {
+                if (type == Constants.DB_SOURCE_TYPE_PISQL) {
                     String driver = "com.osisoft.jdbc.Driver";
                     Properties plist = new Properties();
                     plist.put("user", dbUser);
-                    plist.put("password", dbPass);  
-                    // Class.forName(driver).newInstance();    
-                    Class.forName(driver).getDeclaredConstructor().newInstance();    
-                    conn = DriverManager.getConnection(sourceJDBCUrl,plist);
-                } else if ( type == Constants.DB_SOURCE_TYPE_MYSQL ) {
+                    plist.put("password", dbPass);
+                    plist.put("TrustedConnection", "Yes");
+                    // Class.forName(driver).newInstance();
+                    Class.forName(driver).getDeclaredConstructor().newInstance();
+                    conn = DriverManager.getConnection(sourceJDBCUrl, plist);
+                } else if (type == Constants.DB_SOURCE_TYPE_MYSQL) {
                     conn = DriverManager.getConnection(sourceJDBCUrl, dbUser, dbPass);
                 } else {
                     conn = DriverManager.getConnection(sourceJDBCUrl);
                 }
 
-            } catch(Exception e) {
+            } catch (Exception e) {
                 logger.log(Level.INFO, e.getMessage(), e);
                 conn = null;
             }
@@ -230,7 +237,8 @@ public class DataProvider {
                 logger.info("Retry source DB connection after 5 seconds.");
                 try {
                     Thread.sleep(5000);
-                } catch (Exception e) {}
+                } catch (Exception e) {
+                }
             }
         }
 
@@ -250,29 +258,32 @@ public class DataProvider {
 
             try {
                 td = tc.get(idString);
-            } catch(Exception e) { }
+            } catch (Exception e) {
+            }
             if (td == null) {
                 logger.warning("Tag data is not in cache: " + idString);
                 continue;
             }
 
-            // System.out.println(String.format("tagId=%s tagPath=%s value=%s", tagid, td.getTagPath(), value));
+            // System.out.println(String.format("tagId=%s tagPath=%s value=%s", tagid,
+            // td.getTagPath(), value));
 
             String evtts = rs.getString("t_stamp");
             String tmString = td.getMetrics();
             JSONObject tm = new JSONObject(tmString);
-            String [] iotData = new String[Constants.IOTP_IGNITION_DEVICE_TOTAL];
+            String[] iotData = new String[Constants.IOTP_IGNITION_DEVICE_TOTAL];
             iotData[Constants.IOTP_IGNITION_DEVICE_DEVICETYPE] = td.getDeviceType();
             iotData[Constants.IOTP_IGNITION_DEVICE_DEVICEID] = td.getDeviceId();
             iotData[Constants.IOTP_IGNITION_DEVICE_EVT_NAME] = "EventA";
-            // iotData[Constants.IOTP_IGNITION_DEVICE_EVT_TIMESTAMP] = evtts.replace(' ', 'T') + "Z";
+            // iotData[Constants.IOTP_IGNITION_DEVICE_EVT_TIMESTAMP] = evtts.replace(' ',
+            // 'T') + "Z";
             iotData[Constants.IOTP_IGNITION_DEVICE_EVT_TIMESTAMP] = evtts;
             iotData[Constants.IOTP_IGNITION_DEVICE_INTVALUE] = rs.getString("intvalue");
             iotData[Constants.IOTP_IGNITION_DEVICE_FLOATVALUE] = rs.getString("floatvalue");
             iotData[Constants.IOTP_IGNITION_DEVICE_STRINGVALUE] = rs.getString("stringvalue");
             iotData[Constants.IOTP_IGNITION_DEVICE_DATEVALUE] = rs.getString("datevalue");
             iotData[Constants.IOTP_IGNITION_DEVICE_TYPE] = rs.getString("datatype");
-            iotData[Constants.IOTP_IGNITION_DEVICE_DECIMALACCURACY] = tm.optString("decimalAccuracy", ""); 
+            iotData[Constants.IOTP_IGNITION_DEVICE_DECIMALACCURACY] = tm.optString("decimalAccuracy", "");
             iotData[Constants.IOTP_IGNITION_DEVICE_UNIT] = tm.optString("unit", "");
             iotData[Constants.IOTP_IGNITION_DEVICE_TAG] = td.getTagPath();
 
@@ -287,12 +298,16 @@ public class DataProvider {
     }
 
     private static void resetDBConnection(Statement stmt, ResultSet rs, Connection conn) throws Exception {
-        if (stmt != null) stmt.close();
-        if (rs != null) rs.close();
-        if (conn != null) conn.close();
+        if (stmt != null)
+            stmt.close();
+        if (rs != null)
+            rs.close();
+        if (conn != null)
+            conn.close();
         try {
             Thread.sleep(50);
-        } catch (Exception e) {}
+        } catch (Exception e) {
+        }
     }
 
     private static String getDBSql(long startMilli, long endMilli) {
@@ -304,7 +319,7 @@ public class DataProvider {
             String sDateStr = df.format(sDate);
             String eDateStr = df.format(eDate);
             sqlStr = String.format(sqlQueryTemplate, sDateStr, eDateStr);
-        } catch(Exception ex) {
+        } catch (Exception ex) {
             ex.printStackTrace();
         }
 
@@ -317,4 +332,3 @@ public class DataProvider {
     }
 
 }
-
